# agentpay

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  package.json  railway.json
apps/agentpay-mcp/: README.md  package.json
apps/agentpay-mcp/src/: index.ts  tools.ts  vault.ts
apps/alpha-scout/: Dockerfile  pyproject.toml  railway.json
apps/alpha-scout/alpha_scout/: __init__.py  config.py  main.py
apps/alpha-scout/alpha_scout/agent/: __init__.py  core.py  memory.py  prompts.py  tools.py
apps/alpha-scout/alpha_scout/api/: paywall.py  routes.py
apps/alpha-scout/alpha_scout/research/: __init__.py  analyzer.py  cache.py  sources.py
apps/alpha-scout/alpha_scout/social/: __init__.py  twitter.py
apps/alpha-scout/alpha_scout/tasks/: __init__.py  research_cron.py  social_cron.py  treasury_cron.py  weekly_decision_cron.py
apps/alpha-scout/alpha_scout/treasury/: __init__.py  manager.py  policies.py
apps/dashboard/: next.config.js  package.json  tailwind.config.js
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/api/state/: route.ts
apps/dashboard/app/api/stress-test/: route.ts
apps/dashboard/app/api/transactions/: route.ts
apps/dashboard/app/components/: ComparisonTable.tsx  LiveStats.tsx  LiveTxStream.tsx  PolicyPanel.tsx  StressTest.tsx  TransactionFeed.tsx  UptimeCounter.tsx
apps/data-sink/: package.json
apps/data-sink/src/: index.ts
apps/example-api/: package.json  server.ts
apps/example-py-api/: main.py  pyproject.toml
programs/agent-vault/: Anchor.toml  Cargo.toml  package.json
programs/agent-vault/programs/agent-vault/: Cargo.toml
programs/agent-vault/programs/agent-vault/src/: errors.rs  lib.rs  state.rs
programs/agent-vault/programs/agent-vault/src/instructions/: emergency_withdraw.rs  initialize_fee_collector.rs  initialize_vault.rs  mod.rs  update_policy.rs  withdraw_with_policy.rs
programs/agent-vault/tests/: agent-vault.ts  security-tests.ts
scripts/: deploy-devnet.sh  deploy-mainnet.sh  init-mainnet-vault.ts  init-vault.sh  multi-agent-demo.ts  seed-traffic.sh  setup-chain.ts  setup-datasink.ts  setup-vendors.sh  sync-idl.sh  x402-client-test.ts
