[tool.poetry]
name = "alpha-scout"
version = "0.1.0"
description = "AlphaScout — Autonomous research agent on Solana, powered by AgentPay"
authors = ["AgentPay Team"]
license = "MIT"
packages = [{include = "alpha_scout"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.0"
httpx = "^0.27.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
tweepy = "^4.14.0"
agentpay = {path = "../../packages/sdk-py", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
