[workspace]
members = ["programs/agent-vault"]
resolver = "2"

[workspace.dependencies]
# Pin proc-macro-crate to avoid pulling toml_edit 0.25+ which requires edition2024
proc-macro-crate = "=3.2.0"

# Constrain transitive deps that require edition2024
[workspace.dependencies.toml_edit]
version = "=0.22.27"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
