[package]
name = "agent-vault"
version = "0.1.0"
description = "AgentVault - Programmable wallets for AI agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
