[package]
name = "agent-vault"
version = "0.1.0"
description = "AgentVault - Programmable wallets for AI agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }

# Pin transitive deps to avoid edition2024 crates that break older cargo
hashbrown = ">=0.14, <0.17"
zerocopy = ">=0.7, <0.8"
toml_edit = "=0.22.27"
proc-macro-crate = "=3.2.0"
